3.0.3
Issue #2303 Get-BestGenericImageName sometimes returns an image which is newer than the host OS
Hardcode replacement artifacts for 16.18
Issue #2321 Add language to Start-BcContainerAppDataUpgrade
Issue #2320 Better error message in Publish-PerTenantExtensionApps

3.0.2
Issue #2280 TypeNotFound on [Path]::GetFileName($vsixUrl)
Issue "2287 Create-AadAppsForBC function now creating error when used along with -preAuthorizePowerShell
Issue - Resolve-DependenciesFromAzureFeed not ignoring first lvl dependencies
Issue - Resolve-DependenciesFromAzureFeed not working with 4.0 and lower runtimes
Support OpenIdConnect for AAD setup for v20+
Hardcode replacement artifacts for 18.9 and 17.14 builds

3.0.1
Fix issues with bacpac creation when windows users are present in database.
Add Daily and Weekly options to Get-BcArtifactUrl
Performance optimization of Get-BcArtifactUrl
Get-BcContainerEventLog now copies the eventlog to HostHelperFolder\EventLogs instead of my folder to avoid blocking container deletion
Remove Application Roles from bacpacs (re. VA1246 - https://docs.microsoft.com/en-us/azure/azure-sql/database/sql-database-vulnerability-assessment-rules)
Issue #2245 - UnInstall-BcContainerApp -doNotSaveData fails
Add parameter -GrantAdminConsent to Create-AadAppsForBC
Use Microsoft Graph API (instead of deprecated Azure AD Graph API) in Create-AadAppsForBC
New parameters for New-BcContainer AadAppId and AadAppIdUri for creating containers with AAD authentication
Issue #2259 - FilesOnly containers doesn't respect the -vsixFile parameter
Better AAD support for containers
Add AadTenant, AadAppIdUri and AadAppId to New-BcContainer for enhanced AAD support
Issue #2267 Publish-BcContainerApp as Delegated Admin doesn't work
Add standard audience as valid to support the current implementation in the AL extension when calling the dev endpoint with AAD auth
Issue #2274 Unable to download symbols for 1st party apps in localized containers with Run-ALValidation 

3.0.0