@@ -3,6 +3,7 @@ Issue #2303 Get-BestGenericImageName sometimes returns an image which is newer t
 Hardcode replacement artifacts for 16.18
 Issue #2321 Add language to Start-BcContainerAppDataUpgrade
 Issue #2320 Better error message in Publish-PerTenantExtensionApps
+Issue #2325 Support for resourceExposurePolicy in Extract-AppFileToFolder
 
 3.0.2
 Issue #2280 TypeNotFound on [Path]::GetFileName($vsixUrl)
